[tool.poetry]
name = "aff-marketing-bot"
version = "0.1.0"
description = "A discord bot for interacting with affliate marketing resources online"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
requests-random-user-agent = "^2023.2.15"

[tool.poetry.scripts]
bot = 'aff_marketing_bot.bot:main'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
