[tool.poetry]
name = "feed_bot"
version = "0.2.5"
description = "A discord bot for posting rss feeds and read-only json apis from websites"
authors = ["Christopher Dixon <chrisdixononcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"
motor = "^3.3.2"
aiohttp = {extras = ["speedups"], version = "^3.9.3"}
asyncpraw = "^7.7.1"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.11.6"

[tool.poetry.scripts]
bot = 'feed_bot.bot:main'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
